SERVER-12089 Query planner: test exactly one text index for TEXT